--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "playwright-ci",
   "license": "BSD-3.0",
   "version": "0.1.1",
-  "description": "☁️ Set up Playright in CI",
+  "description": "☁️ Set up Playwright in CI",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
