--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tslib": "^1.11.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.1.0",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^25.1.3",
     "@types/node": "^12.12.28",
