--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
     "handlebars": "^4.7.3",
-    "inquirer": "^7.0.4",
+    "inquirer": "^7.1.0",
     "kleur": "^3.0.3",
     "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/inquirer": "^6.5.0",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^12.12.28",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.29",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
     "@typescript-eslint/parser": "~2.19.2",
     "eslint": "~6.8.0",
@@ -49,7 +49,7 @@
     "rimraf": "~3.0.2",
     "ts-jest": "^25.2.1",
     "tsutils": "~3.17.0",
-    "typescript": "~3.8.2"
+    "typescript": "^3.8.3"
   },
   "bin": {
     "playwright-ci": "./build/index.js"
