--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "noImplicitThis": false,
     "skipLibCheck": true,
     "strictNullChecks": false,
-    "declaration": true
+    "declaration": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*", "test/**/*"]
 }
