--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
     "handlebars": "^4.7.3",
+    "inquirer": "^7.1.0",
     "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.29",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
