--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,6 +29,6 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run build
-      - run: npm test
+      - run: npm run test:unit
 
     timeout-minutes: 20
