bitbucket: cache ~/.cache folder

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,8 @@ pipelines:
         name: Playwright Tests
         image: qawolf/playwright-ci:v0.10.0
         caches:
-          - node
+          - ~/.cache
+          - node_modules
         script:
           - npm install
         
